--- a/WebAppService/Areas/Admin/Views/DichVu/DichVu.cshtml
+++ b/WebAppService/Areas/Admin/Views/DichVu/DichVu.cshtml
@@ -91,13 +91,13 @@
                                                 <label class="fs-2 form-label m-0">Tên tiêu đề:<font class="text-danger">*</font> </label>
                                                 <input type="text" class="form-control" placeholder="Nhập tiêu đề ..." id="TieuDeBaiViet" value="">
                                             </div>
-                                            <div class="col-sm-6 mb-2">
+                                            <div class="col-sm-12 mb-2">
                                                 <label class="form-label">Nhóm dịch vụ chuyên khoa:<font class="text-danger">*</font></label>
                                                 <select data-placeholder="Choose a Country..." class="form-control chosen-select" id="CbNhomBaiViet1" tabindex="2">
                                                     <option value="">--Chọn nếu là nhóm bài viết--</option>
                                                 </select>
                                             </div>
-                                            <div class="col-sm-6 mb-2">
+                                            <div class="col-sm-6 mb-2" hidden>
                                                 <label class="form-label">Nhóm dịch vụ đặc biệt:<font class="text-danger">*</font></label>
                                                 <select data-placeholder="Choose a Country..." class="form-control chosen-select" id="CbNhomBaiViet2" tabindex="2">
                                                     <option value="">--Chọn nếu là nhóm bài viết--</option>
@@ -106,14 +106,6 @@
                                             <div class="col-sm-6 mb-2" hidden>
                                                 <label class="form-label">Loại danh mục:</label>
                                                 <input type="type" name="name" value="" id="CbLoaiBaiDang" />
-                                            </div>
-                                            <div class="col-sm-12 mb-2">
-                                                <div class="alert customize-alert alert-dismissible border-primary text-info fade show p-1" role="alert">
-                                                    <div class="d-flex align-items-center  me-3 me-md-0">
-                                                        <i class="ti ti-info-circle fs-5 me-2 text-info"></i>
-                                                        Chọn 1 trong 2 nhóm dịch vụ bên dưới để phân loại bài viết của bạn.
-                                                    </div>
-                                                </div>
                                             </div>
                                             <div class="col-sm-12 mb-2" hidden>
                                                 <label class="form-label">Tiêu đề loại danh mục(nếu có):</label>
