--- a/WebAppService/Areas/Admin/Views/Video/Video.cshtml
+++ b/WebAppService/Areas/Admin/Views/Video/Video.cshtml
@@ -104,11 +104,15 @@
                                                 <label class="fs-2 form-label m-0">Mô tả:</label>
                                                 <textarea type="text" class="form-control" placeholder="Mô tả ..." rows="2" id="MoTaNgan" value=""></textarea>
                                             </div>
-                                            <div class="col-sm-12 mb-2">
+                                            <div class="col-sm-12 mb-2" hidden>
                                                 <label class="form-label">Tải video:</label>
                                                 <input class="form-control" type="file" id="duong_dan_video">
                                                 <div id="ten_file_video" style="margin-left:10px;"></div>
                                                 <input type="text" id="isThayDoi2" hidden />
+                                            </div>
+                                            <div class="col-sm-12 mb-2">
+                                                <label class="fs-2 form-label m-0">Link Video:</label>
+                                                <input type="text" class="form-control" placeholder="(Gắn link dưới dạng embed) ..." id="UrlVideo" value="">
                                             </div>
                                             <div class="mb-2 row">
                                                 <div class=" col-sm-3">
