--- a/WebAppService/Views/Shared/_HeaderMenu.cshtml
+++ b/WebAppService/Views/Shared/_HeaderMenu.cshtml
@@ -1,14 +1,14 @@
 ﻿<div class="header-top header-menutop">
-    <div class="contact">
-        <span><i class="fas fa-map-marker-alt"></i> Ha Noi, Viet Nam</span>
-        <span><i class="fas fa-envelope"></i> <a href="mailto:support@carelink.com" class="text-white">support@carelink.com</a></span>
-        <span> <a href="tel:628646442222" class="text-white"> <i class="fas fa-phone"></i> +62 864 644 2222</a></span>
+    <div class="contact container px-30 pr-20">
+        <span style="font-family: 'Inter';"><i class="fas fa-map-marker-alt"></i> Ha Noi, Viet Nam</span>
+        <span style="font-family: 'Inter';"><i class="fas fa-envelope"></i> <a href="mailto:support@carelink.com" class="text-white">support@carelink.com</a></span>
+        <span style="font-family: 'Inter';"> <a href="tel:628646442222" class="text-white"> <i class="fas fa-phone"></i> +62 864 644 2222</a></span>
         <div class="flags">
             <a href="#" class="translate-btn" data-lang="vi"> <img src="https://flagcdn.com/vn.svg" alt="Vietnam"></a>
             <a href="#" class="translate-btn" data-lang="ko"> <img src="https://flagcdn.com/kr.svg" alt="South Korea Flag"></a>
             <a href="#" class="translate-btn" data-lang="ja"> <img src="https://flagcdn.com/jp.svg" alt="Japan"></a>
             <a href="#" class="translate-btn" data-lang="zh-CN"> <img src="https://flagcdn.com/tw.svg" alt="Chinese"></a>
-            <a href="#" class="translate-btn" data-lang="en"> <img src="https://flagcdn.com/gb.svg" alt="English"></a>
+            <a href="#" class="translate-btn" data-lang="en"> <img src="https://flagcdn.com/gb.svg" alt="English" style="width:40px"></a>
         </div>
     </div>
 </div>
