--- a/WebAppService/Views/Home/Index.cshtml
+++ b/WebAppService/Views/Home/Index.cshtml
@@ -3,9 +3,11 @@
     ViewData["Title"] = "Home Page";
 }
 <link href="~/web/assets/css/home.css" rel="stylesheet" />
+<link href="~/web/assets/css/slider.css" rel="stylesheet" />
 <script src="https://cdn.jsdelivr.net/npm/dot/doT.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 @section Scripts {
+    <script src="~/web/assets/js/slider.js"></script>
     <script>
         function scrollSlider(direction) {
             const slider = document.getElementById('slider');
@@ -33,70 +35,106 @@
         });
     </script>
     <script>
-          var myClient = {
-              init: function(){
-                  myClient.LoadData();
-              },
-           
-              LoadData: function () {
-                  $.ajax({
-                       url: '/Home/LoadDataBefore',
-                      type: "GET",
-                      dataType: "json",
-                      success: function (data) {
-                          if (data.status == true) {
-                              var lstData = data.viewModel;
-                              if(lstData.record != null)
-                              {
-                                  $('#_layout1').html(lstData.record.noiDung);
-                              }
-                              if(lstData.record2 != null)
-                              {
-                                  $('#_layout2').html(lstData.record2.noiDung);
-                              }
-                               myClient.LoadData2();
-                          }
-                      }
-                  });
-              },
-              LoadData2: function () {
+           var myClient = {
+               init: function(){
+                   myClient.LoadData();
+                   myClient.LoadData2();
+               },
+
+               LoadData: function () {
                    $.ajax({
-                       url: '/Home/LoadDataAfter',
+                        url: '/Home/LoadDataBefore',
                        type: "GET",
                        dataType: "json",
                        success: function (data) {
                            if (data.status == true) {
                                var lstData = data.viewModel;
-                               if (lstData.listData != null) {
-                                   var template = doT.template($("#news-template").html());
-                                   $("#sp_sv").html(template({ newsList: lstData.listData }));
+                               if(lstData.record != null)
+                               {
+                                   $('#_layout1').html(lstData.record.noiDung);
                                }
-                                if (lstData.record3.length > 0) {
-                                   var template = doT.template($("#news-templatem").html());
-                                   $("#list_bai_viet0").html(template({ newsListm: lstData.record3 }));
+                               if(lstData.record2 != null)
+                               {
+                                   $('#_layout2').html(lstData.record2.noiDung);
                                }
-                               if (lstData.record4.length > 0) {
-                                   var template = doT.template($("#news-templatex").html());
-                                   $("#original-articles").html(template({ newsListx: lstData.record4 }));
-                               }
-                                if (lstData.record5.length > 0) {
-                                   var template = doT.template($("#news-templatevm").html());
-                                   $("#list_bai_viet1").html(template({ newsListvm: lstData.record5 }));
-                               }
-                               if (lstData.record6.length > 0) {
-                                   var template = doT.template($("#news-templatevx").html());
-                                   $("#original-article1").html(template({ newsListvx: lstData.record6 }));
-                               }
+                                if (lstData.listData != null) {
+                                    var template = doT.template($("#news-template").html());
+                                    $("#sp_sv").html(template({ newsList: lstData.listData }));
+                                }
                            }
                        }
                    });
                },
-        };
-       myClient.init();
+               LoadData2: function () {
+                    $.ajax({
+                        url: '/Home/LoadDataAfter',
+                        type: "GET",
+                        dataType: "json",
+                        success: function (data) {
+                            if (data.status == true) {
+                                 var lstData = data.viewModel;
+                                 if (lstData.record3.length > 0) {
+                                    var template = doT.template($("#news-templatem").html());
+                                    $("#list_bai_viet0").html(template({ newsListm: lstData.record3 }));
+                                }
+                                if (lstData.record4.length > 0) {
+                                    var template = doT.template($("#news-templatex").html());
+                                    $("#original-articles").html(template({ newsListx: lstData.record4 }));
+                                }
+                                 if (lstData.record5.length > 0) {
+                                    var template = doT.template($("#news-templatevm").html());
+                                    $("#list_bai_viet1").html(template({ newsListvm: lstData.record5 }));
+                                }
+                                if (lstData.record6.length > 0) {
+                                    var template = doT.template($("#news-templatevx").html());
+                                    $("#original-article1").html(template({ newsListvx: lstData.record6 }));
+                                }
+                                $('.play-video').magnificPopup({
+                                       type: "iframe",
+                                        mainClass: "mfp-fade",
+                                        removalDelay: 160,
+                                        preloader: true,
+                                        fixedContentPos: false
+                                });
+                            }
+                        }
+                    });
+                },
+         };
+        myClient.init();
     </script>
 }
 
-<div id="_layout1" class="d-none"></div>
+@* <div id="_layout1"></div> *@
+<div class="animated-slider is-web">
+    <div class="slide active">
+        <img src="~/src/slide/Slide-web.png" />
+        <div class="caption zoom-in"></div>
+    </div>
+    <div class="slide">
+        <img src="~/src/slide/Medical-01.png" />
+        <div class="caption slide-left"></div>
+    </div>
+    <div class="slide">
+        <img src="~/src/slide/Medical-02.png" />
+        <div class="caption slide-left"></div>
+    </div>
+</div>
+<div class="animated-slider is-mobile">
+    <div class="slide active">
+        <img src="~/src/slide/Slide-mobile.png" />
+        <div class="caption zoom-in"></div>
+    </div>
+    <div class="slide">
+        <img src="~/src/slide/Medical-03.png" />
+        <div class="caption slide-left"></div>
+    </div>
+    <div class="slide">
+        <img src="~/src/slide/Medical-04.png" />
+        <div class="caption slide-left"></div>
+    </div>
+</div>
+@* <img src="~/src/slide/bg-sun.png" /> *@
 <!-- Hộp nổi dịch vụ -->
 <div class="floating-box-wrapper">
     <div class="floating-box container col-12 row">
@@ -132,14 +170,13 @@
     </div>
 </div>
 <div id="_layout2"></div>
-
 <!-- Danh sách dịch vụ -->
 <div class="service-card-y" style="background:#F5FFFFCC">
     <div class="container px-30 py-2 container-mobile">
         <div class="archive-header text-center mb-30 mt-10">
             <div class="container">
                 <div>
-                    <span class="text-head-breadcrumb text-ic-5 text-up text-uppercase">Dịch Vụ đặc biệt</span>
+                    <span class="text-head-breadcrumb text-ic-5 text-up">Dịch Vụ Đặc Biệt</span>
                 </div>
                 <p class="text-ics-5 mb-4 text-center">
                     Chúng tôi cung cấp các dịch vụ tốt nhất với đội ngũ y tế tốt nhất!
@@ -241,7 +278,7 @@
                 <button class="nav-button nav-right" onclick="scrollSlider(1)">❯</button>
                 <div class="slider-container" id="slider">
                     <div class="service-card justify-items-center">
-                        <a href="single.html" class="client-img-wrapper img-client-boder">
+                        <a href="#" class="client-img-wrapper img-client-boder">
                             <img src="/root/img-client.png" class="img-client-boder" alt="">
                         </a>
                         <div class="service-content text-center">
@@ -260,7 +297,7 @@
                     </div>
                     <!-- 1 -->
                     <div class="service-card justify-items-center">
-                        <a href="single.html" class="client-img-wrapper img-client-boder">
+                        <a href="#" class="client-img-wrapper img-client-boder">
                             <img src="/root/img-client2.png" class="img-client-boder" alt="">
                         </a>
                         <div class="service-content text-center">
@@ -279,7 +316,7 @@
                     </div>
                     <!-- 1 -->
                     <div class="service-card justify-items-center">
-                        <a href="single.html" class="client-img-wrapper img-client-boder">
+                        <a href="#" class="client-img-wrapper img-client-boder">
                             <img src="/root/img-client3.png" class="img-client-boder" alt="">
                         </a>
                         <div class="service-content text-center">
@@ -298,7 +335,7 @@
                     </div>
                     <!-- 1 -->
                     <div class="service-card justify-items-center">
-                        <a href="single.html" class="client-img-wrapper img-client-boder">
+                        <a href="#" class="client-img-wrapper img-client-boder">
                             <img src="~/root/img-client.png" class="img-client-boder" alt="">
                         </a>
                         <div class="service-content text-center">
@@ -323,7 +360,7 @@
             <div class="">
                 <!-- 1 -->
                 <div class="service-card justify-items-center">
-                    <a href="single.html" class="client-img-wrapper img-client-boder">
+                    <a href="#" class="client-img-wrapper img-client-boder">
                         <img src="/root/img-client.png" class="img-client-boder" alt="">
                     </a>
                     <div class="service-content text-center">
@@ -342,7 +379,7 @@
                 </div>
                 <!-- 1 -->
                 <div class="service-card justify-items-center">
-                    <a href="single.html" class="client-img-wrapper img-client-boder">
+                    <a href="#" class="client-img-wrapper img-client-boder">
                         <img src="/root/img-client2.png" class="img-client-boder" alt="">
                     </a>
                     <div class="service-content text-center">
@@ -361,7 +398,7 @@
                 </div>
                 <!-- 1 -->
                 <div class="service-card justify-items-center">
-                    <a href="single.html" class="client-img-wrapper img-client-boder">
+                    <a href="#" class="client-img-wrapper img-client-boder">
                         <img src="/root/img-client3.png" class="img-client-boder" alt="">
                     </a>
                     <div class="service-content text-center">
@@ -399,7 +436,7 @@
                     </div>
                 </div>
             </div>
-            <div class="for-more"><a href="#">Xem thêm ></a></div>
+            <div class="for-more"><a href="/Blog/Blog">Xem thêm ></a></div>
         </div>
     </div>
 </div>
@@ -427,14 +464,13 @@
         </div>
     </div>
 </div>
-
 <script id="news-template" type="text/x-dot-template">
     {{ for(var i = 0; i < it.newsList.length; i++) { }}
           <article class="col-lg-4 col-6">
                 <div class="service-card service-card-c bg-hover-green">
                     <div class="post-thumb d-flex mb-15 img-hover-scale justify-content-center">
                         <a href="/Service/ServiceDetail/{{=it.newsList[i].idDichVu}}" class="service-img-wrapper">
-                            <img class="border-radius-15" src="{{=it.newsList[i].urlImage || '/root/6388000.png'}}" width="50" height="50" alt="">
+                            <img class="border-radius-15" src="{{=it.newsList[i].tieuDeNgan || '/root/6388000.png'}}" width="50" height="50" alt="">
                         </a>
                     </div>
                     <div class="desc-title">
@@ -460,7 +496,7 @@
                             </a>
                         </div>
                         <div class="pl-10 pr-10">
-                            <div class="post-title mb-10 text-limit-3-row">
+                            <div class="post-title mb-10 text-limit-2-row">
                                 <a href="/Blog/BlogDetail/{{=it.newsListm[i].idBaiViet}}" class="text-c-3">{{=it.newsListm[i].tieuDeBaiViet}}</a>
                             </div>
                             <div class="">
@@ -481,25 +517,24 @@
             <div class="border-radius-10 p-0 mb-30">
                 <div class="post-thumb d-flex mb-15 border-radius-5 img-hover-scale">
                     <a href="/Blog/BlogDetail/{{=it.newsListx[i].idBaiViet}}">
-                        <img class="border-radius-5" src="{{=it.newsListx[i].urlImage || '/root/6388000.png'}}" alt="">
+                        <img class="border-radius-5 bcsm-image" src="{{=it.newsListx[i].urlImage || '/root/6388000.png'}}" alt="">
                     </a>
                 </div>
                 <div class="pl-10 pr-10">
-                    <div class="post-title mb-10 text-limit-3-row">
+                    <div class="post-title mb-10 text-limit-2-row">
                         <a href="/Blog/BlogDetail/{{=it.newsListx[i].idBaiViet}}" class="text-c-3">{{=it.newsListx[i].tieuDeBaiViet}}</a>
                     </div>
                     <div class="">
-                        <p class="post-exerpt text-c-2 text-limit-3-row">{{=it.newsListx[i].moTaNgan}}</p>
+                        <p class="post-exerpt text-c-2 text-limit-2-row">{{=it.newsListx[i].moTaNgan}}</p>
                     </div>
                     <div>
-                        <a href="single.html" class="read-more">Xem thêm</a>
+                        <a href="#" class="read-more">Xem thêm</a>
                     </div>
                 </div>
             </div>
         </article>
     {{ } }}
 </script>
-
 <script id="news-templatevm" type="text/x-dot-template">
     {{ for(var i = 0; i < it.newsListvm.length; i++) { }}
         <div class="img-hover-scale border-radius-10 position-relative overflow-hidden">
@@ -508,7 +543,7 @@
             </a>
              <div class="video-overlay position-absolute top-0 start-0 w-100 h-100"></div>
             <div class="play_btn play_btn_small position-absolute top-50 start-50 translate-middle">
-                <a class="play-video" href="{{=it.newsListvm[i].urlVideo}}">
+                <a class="play-video" href="{{=it.newsListvm[i].urlVideo}}"  data-animate="zoomIn" data-duration="1.5s" data-delay="0.1s">
                     <div class="custom-play-button">
                         <i class="fa fa-play"></i>
                     </div>
@@ -535,7 +570,7 @@
                                 </a>
                                  <div class="video-overlay position-absolute top-0 start-0 w-100 h-100"></div>
                                 <div class="play_btn play_btn_small position-absolute top-50 start-50 translate-middle">
-                                    <a class="play-video" href="{{=it.newsListvx[i].urlVideo}}" >
+                                    <a class="play-video" href="{{=it.newsListvx[i].urlVideo}}"  data-animate="zoomIn" data-duration="1.5s" data-delay="0.1s">
                                      <div class="custom-play-button">
                                         <i class="fa fa-play"></i>
                                     </div>
