--- a/WebAppService/Views/LienHe/LienHe.cshtml
+++ b/WebAppService/Views/LienHe/LienHe.cshtml
@@ -143,7 +143,7 @@
         <div class="map-section mx-map">
             <h5 class="fx-Montserrat"><strong>Vị trí của Bệnh viện Sun Medical</strong></h5>
             <p style="font-family:Inter;font-size:14px;margin-bottom: 14px;">Vui lòng xem bản đồ dưới đây để xác định vị trí chính xác của Bệnh viện Sun Medical.</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.858109795675!2d105.80054021531389!3d21.036238792915985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab6ee9d816fd%3A0x93b2549b3593cc5a!2sTimes%20Tower!5e0!3m2!1sen!2s!4v1650289940599"
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.75052847405!2d105.80155719999999!3d21.002634999999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ad6f2deb9785%3A0x74d1d3169c279367!2zUGjDsm5nIGtow6FtIMSRYSBraG9hIFN1biBNZWRpY2FsIFZp4buHdCBOYW0!5e0!3m2!1sen!2s!4v1754500631661!5m2!1sen!2s"
                     allowfullscreen=""
                     loading="lazy">
             </iframe>
