--- a/WebAppService/Views/Shared/_StyleBundle.cshtml
+++ b/WebAppService/Views/Shared/_StyleBundle.cshtml
@@ -12,6 +12,7 @@
 <link href="~/web/css/layout.css" rel="stylesheet" />
 <link rel="stylesheet" href="~/web/assets/css/style.css">
 <link rel="stylesheet" href="~/web/assets/css/widgets.css">
+<link href="~/web/assets/css/vendor/magnific-popup.css" rel="stylesheet" />
 <link rel="stylesheet" href="~/web/assets/css/color.css">
 <link rel="stylesheet" href="~/web/assets/css/responsive.css">
 <link href="~/web/assets/css/main.css" rel="stylesheet" />
