--- a/WebAppService/wwwroot/web/assets/css/home.css
+++ b/WebAppService/wwwroot/web/assets/css/home.css
@@ -95,7 +95,7 @@
 
 .social-float-buttons {
     position: absolute;
-    top: 20%;
+    top: 15%;
     right: 230px;
     display: flex;
     flex-direction: column;
@@ -227,7 +227,7 @@
 }
 
 .author-info-text {
-    font-size: 50px;
+    font-size: 45px;
     font-family: Montserrat;
 }
 
@@ -525,6 +525,7 @@
     font-family: 'Manrope', sans-serif;
     font-weight: bold;
     font-size: 16px;
+    z-index: 100;
 }
 
 .text-ic-5 {
@@ -547,7 +548,11 @@
 }
 
 .mtauthordv {
-    margin-top: 130px !important;
+    margin-top: 90px !important;
+}
+.bcsm-image {
+    width: 100%;
+    height: 150px;
 }
 
 @media screen and (max-width: 768px) {
@@ -558,7 +563,7 @@
 
     .social-float-buttons {
         position: fixed;
-        top: 40%;
+        top: 65%;
         right: 4px;
         display: flex;
         flex-direction: column;
@@ -644,24 +649,8 @@
         z-index: 0;
     }
 
-    /*.orange-top {
-        position: absolute;
-        top: 272px;
-        right: 316px;
-        width: 517px;
-        opacity: 0.9;
-        z-index: 0;
-    }
 
-    .orange-bottom {
-        position: absolute;
-        bottom: 55px;
-        left: 900px;
-        width: 500px;
-        opacity: 0.9;
-        z-index: 0;
-    }*/
-
+   
     /* CSS dành cho mobile */
     .mobile-icon {
         margin-top: 8px !important;
