--- a/WebAppService/Areas/Admin/Views/DanhSachNhanSu/DanhSachNhanSu.cshtml
+++ b/WebAppService/Areas/Admin/Views/DanhSachNhanSu/DanhSachNhanSu.cshtml
@@ -123,6 +123,10 @@
                                                 <textarea type="text" class="form-control" placeholder="Ngôn ngữ ..." rows="2" id="NgonNgu" value=""></textarea>
                                             </div>
                                             <div class="col-sm-12 mb-2">
+                                                <label class="fs-2 form-label m-0">Đường dẫn mẫu (vi) :</label>
+                                                <input type="text" class="form-control" placeholder="sun-medical" id="SeoUrl" value="">
+                                            </div>
+                                            <div class="col-sm-12 mb-2">
                                                 <label class="fs-2 form-label m-0">Kinh nghiệm làm việc:</label>
                                                 <textarea id="editor"></textarea>
                                                 @* <textarea type="text" class="form-control" placeholder="Kinh nghiệm làm việc ..." rows="2" id="KinhNghiemLamViec" value=""></textarea> *@
