--- a/WebAppService/Areas/Admin/Views/DichVu/DichVu.cshtml
+++ b/WebAppService/Areas/Admin/Views/DichVu/DichVu.cshtml
@@ -103,6 +103,10 @@
                                                     <option value="">--Chọn nếu là nhóm bài viết--</option>
                                                 </select>
                                             </div>
+                                            <div class="col-sm-12 mb-2">
+                                                <label class="fs-2 form-label m-0">Đường dẫn mẫu (vi) :</label>
+                                                <input type="text" class="form-control" placeholder="sun-medical" id="SeoUrl" value="">
+                                            </div>
                                             <div class="col-sm-6 mb-2" hidden>
                                                 <label class="form-label">Loại danh mục:</label>
                                                 <input type="type" name="name" value="" id="CbLoaiBaiDang" />
