--- a/WebAppService/Areas/Admin/Views/DichVuDacBiet/DichVuDacBiet.cshtml
+++ b/WebAppService/Areas/Admin/Views/DichVuDacBiet/DichVuDacBiet.cshtml
@@ -104,6 +104,10 @@
                                                 <label class="fs-2 form-label m-0">Mô tả:</label>
                                                 <textarea type="text" class="form-control" placeholder="Mô tả ..." rows="3" id="MoTaNgan" value=""></textarea>
                                             </div>
+                                            <div class="col-sm-12 mb-2">
+                                                <label class="fs-2 form-label m-0">Đường dẫn mẫu (vi) :</label>
+                                                <input type="text" class="form-control" placeholder="sun-medical" id="SeoUrl" value="">
+                                            </div>
                                             <div class="mb-2 row">
                                                 <div class=" col-sm-3" hidden>
                                                     <input class="form-check-input" type="checkbox" value="" id="IsBaiVietNoiBat">
