--- a/WebAppService/Areas/Admin/Views/Shared/_MoldunLeftSideBar.cshtml
+++ b/WebAppService/Areas/Admin/Views/Shared/_MoldunLeftSideBar.cshtml
@@ -57,6 +57,14 @@
                     </a>
                     <ul aria-expanded="false" class="collapse first-level">
                         <li class="sidebar-item">
+                            <a href="/Admin/Slider/Slider" class="sidebar-link">
+                                <div class="round-16 d-flex align-items-center justify-content-center">
+                                    <i class="ti ti-circle"></i>
+                                </div>
+                                <span class="hide-menu">Giao diện Slider</span>
+                            </a>
+                        </li>
+                        <li class="sidebar-item">
                             <a href="/Admin/Home/HomePage1" class="sidebar-link">
                                 <div class="round-16 d-flex align-items-center justify-content-center">
                                     <i class="ti ti-circle"></i>
