--- a/WebAppService/Areas/Admin/Views/TinTucBaiViet/TinTucBaiViet.cshtml
+++ b/WebAppService/Areas/Admin/Views/TinTucBaiViet/TinTucBaiViet.cshtml
@@ -110,7 +110,11 @@
                                             </div>
                                             <div class="col-sm-12 mb-2">
                                                 <label class="form-label">Tiêu đề loại danh mục:</label>
-                                                <input type="text" class="form-control" placeholder="" id="TieuDeNgan" value="" readonly>
+                                                <input type="text" class="form-control" placeholder="" id="TieuDeNgan" value="" disabled>
+                                            </div>
+                                            <div class="col-sm-12 mb-2">
+                                                <label class="fs-2 form-label m-0">Đường dẫn mẫu (vi) :</label>
+                                                <input type="text" class="form-control" placeholder="sun-medical" id="SeoUrl" value="">
                                             </div>
                                             <div class="col-sm-12 mb-2">
                                                 <label class="fs-2 form-label m-0">Mô tả:</label>
