--- a/WebAppService/Views/Home/Index.cshtml
+++ b/WebAppService/Views/Home/Index.cshtml
@@ -561,7 +561,7 @@
 <script id="news-templatevx" type="text/x-dot-template">
     {{ for(var i = 0; i < it.newsListvx.length; i++) { }}
             <div class="item_vd col-lg-12">
-                <article class="p-0 background-white border-radius-10 mb-15 mr-15 wow fadeIn animated">
+                <article class="p-0 border-radius-10 mb-15 mr-15 wow fadeIn animated">
                     <div class="sub_video d-flex">
                         <div class="post-thumb2 d-flex border-radius-5 p-0 img-hover-scale col-sm-6">
                             <div class="img-hover-scale border-radius-10 position-relative overflow-hidden" id="img_dv">
