--- a/WebAppService/Areas/Admin/Views/Video/Video.cshtml
+++ b/WebAppService/Areas/Admin/Views/Video/Video.cshtml
@@ -114,6 +114,10 @@
                                                 <label class="fs-2 form-label m-0">Link Video:</label>
                                                 <input type="text" class="form-control" placeholder="(Gắn link dưới dạng embed) ..." id="UrlVideo" value="">
                                             </div>
+                                            <div class="col-sm-12 mb-2">
+                                                <label class="fs-2 form-label m-0">Đường dẫn mẫu (vi) :</label>
+                                                <input type="text" class="form-control" placeholder="sun-medical" id="SeoUrl" value="">
+                                            </div>
                                             <div class="mb-2 row">
                                                 <div class=" col-sm-3">
                                                     <input class="form-check-input" type="checkbox" value="" id="IsVideoNoiBat">
