--- a/WebAppService/Areas/Admin/Views/DanhSachNhanSu/DanhSachNhanSu.cshtml
+++ b/WebAppService/Areas/Admin/Views/DanhSachNhanSu/DanhSachNhanSu.cshtml
@@ -43,7 +43,8 @@
                                 <th data-field="chucDanh" data-sortable="true">Chức danh</th>
                                 <th data-field="chucVu" data-sortable="true">Chuyên khoa</th>
                                 <th data-field="donViKhoa" data-sortable="true">Cơ sở làm việc</th>
-                          @*       <th data-field="bangCapHocVi" data-sortable="true">Bằng cấp - học vị</th>
+                                <th data-field="seoUrl" data-sortable="true">SeoUrl</th>
+                                @*       <th data-field="bangCapHocVi" data-sortable="true">Bằng cấp - học vị</th>
                                 <th data-field="ngonNgu" data-sortable="true">Ngôn ngữ</th> *@
                             </tr>
                         </thead>
@@ -108,7 +109,7 @@
                                                     <option value="">--Chọn Cơ sở làm việc--</option>
                                                 </select>
                                             </div>
-                                            <div class="col-sm-12 mb-2">
+                                            <div class="col-sm-12 mb-2  ">
                                                 <label class="fs-2 form-label m-0">Chuyên khoa:</label>
                                                 <select data-placeholder="Choose a Country..." class="form-control chosen-select" id="ChucVu" tabindex="2">
                                                     <option value="">--Chọn Chuyên khoa--</option>
@@ -123,8 +124,16 @@
                                                 <textarea type="text" class="form-control" placeholder="Ngôn ngữ ..." rows="2" id="NgonNgu" value=""></textarea>
                                             </div>
                                             <div class="col-sm-12 mb-2">
-                                                <label class="fs-2 form-label m-0">Đường dẫn mẫu (vi) :</label>
-                                                <input type="text" class="form-control" placeholder="sun-medical" id="SeoUrl" value="">
+                                                <label class="fs-2 form-label m-0">Đường dẫn mẫu (vi):<font class="text-danger">*</font></label>
+                                                <div class="input-group">
+                                                    <input type="text" class="form-control" placeholder="sun-medical" id="SeoUrl" value="">
+                                                    <button class="btn btn-danger" id="btnAutoCode" type="button">
+                                                        <div class="d-flex align-items-center">
+                                                            <i class="ti ti-link me-1 fs-4"></i>
+                                                            Lấy tự động
+                                                        </div>
+                                                    </button>
+                                                </div>
                                             </div>
                                             <div class="col-sm-12 mb-2">
                                                 <label class="fs-2 form-label m-0">Kinh nghiệm làm việc:</label>
