--- a/WebAppService/Views/Shared/_ClientMenu.cshtml
+++ b/WebAppService/Views/Shared/_ClientMenu.cshtml
@@ -37,7 +37,7 @@
                         <ul class="sub-menu font-small m-0" id="menuDichVuDacBietMobile">
                         </ul>
                     </li>
-                    <li class="cat-item txt-mobile col-12 p-0"><a href="/Doctor/ListDoctor">Bác Sĩ</a></li>
+                    <li class="cat-item txt-mobile col-12 p-0"><a href="/danh-sach-bac-si">Bác Sĩ</a></li>
                     <li class="cat-item txt-mobile col-12 p-0">
                         <a href="/Blog/Blog">
                             Tin Tức
@@ -119,7 +119,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="/Doctor/ListDoctor" class="text-menu">
+                            <a href="/danh-sach-bac-si" class="text-menu">
                                 Bác Sĩ
                             </a>
                         </li>
