--- a/WebAppService/Views/Doctor/ListDoctor.cshtml
+++ b/WebAppService/Views/Doctor/ListDoctor.cshtml
@@ -162,7 +162,7 @@
                         <div class="row p-0">
                             <div class="col-md-12 col-5 pr-mobile-0">
                                 <div class="post-thumb d-flex img-hover-scale doctor-avartar">
-                                    <a href="/Doctor/DoctorDetail/{{=it.newsList[i].idNhanSu}}">
+                                    <a href="/bac-si/{{=it.newsList[i].seoUrl}}">
                                         <img src="{{=it.newsList[i].urlImage}}" class="img-fluid img-respone-service" alt="" />
                                     </a>
                                 </div>
@@ -171,7 +171,7 @@
                                <div class="pl-10 pr-10 bg-white">
                                 <div class="post-title mb-5 p-10 pt-20 text-center">
                                     <p class="text-d-1 mb-2">
-                                        <a href="/Doctor/DoctorDetail/{{=it.newsList[i].idNhanSu}}">{{=it.newsList[i].hoTen}}</a>
+                                        <a href="/bac-si/{{=it.newsList[i].seoUrl}}">{{=it.newsList[i].hoTen}}</a>
                                     </p>
                                     <p class="text-d-2 mb-2">
                                         <i class="fas fa-graduation-cap"></i> {{=it.newsList[i].chucDanh}}
@@ -180,10 +180,10 @@
                                         <i class="fas fa-house-medical"></i> {{=it.newsList[i].donViKhoa}}
                                     </p>
                                     <div class="mb-10">
-                                      <a href="/Doctor/DoctorDetail/{{=it.newsList[i].idNhanSu}}" class="main-menu btn-orrange btn-detail">Chi tiết</a>
+                                      <a href="/bac-si/{{=it.newsList[i].seoUrl}}" class="main-menu btn-orrange btn-detail">Chi tiết</a>
                                     </div>
                                 </div>
-                        </div>
+                              </div>
                             </div>
                         </div>
                     </div>
