--- a/WebAppService/Views/Shared/_ScriptsBundle.cshtml
+++ b/WebAppService/Views/Shared/_ScriptsBundle.cshtml
@@ -13,6 +13,7 @@
 <script src="~/web/assets/js/vendor/jquery.counterup.min.js"></script>
 <script src="~/web/assets/js/vendor/jquery.theia.sticky.js"></script>
 <script src="~/web/assets/js/main.js"></script>
+<script src="~/web/assets/bottom-navigation/bottom-navigation.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
