--- a/WebAppService/Views/Shared/_StyleBundle.cshtml
+++ b/WebAppService/Views/Shared/_StyleBundle.cshtml
@@ -17,4 +17,5 @@
 <link rel="stylesheet" href="~/web/assets/css/responsive.css">
 <link href="~/web/assets/css/main.css" rel="stylesheet" />
 <link href="~/web/assets/css/settings.css" rel="stylesheet" />
+<link href="~/web/assets/bottom-navigation/bottom-navigation.css" rel="stylesheet" />
 <link href="~/web/assets/css/mobile.css" rel="stylesheet" />
